--- a/scripts/bootstrap.yml
+++ b/scripts/bootstrap.yml
@@ -29,6 +29,14 @@
         - unzip
       state: latest
 
+  - name: Copy kill vm script
+    ansible.builtin.copy:
+      src: helper/killvm.sh
+      dest: /opt/killvm.sh
+      owner: root
+      group: root
+      mode: '700'
+
   - name: create font directory
     file:
       path: ~/.local/share/fonts
