--- a/scripts/bootstrap.yaml
+++ b/scripts/bootstrap.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: pve-nodes
+- hosts: pve-node
   tasks:
   - name: remove prod pve subscription
     file:
@@ -18,7 +18,9 @@
         deb http://download.proxmox.com/debian/pve bookworm pve-no-subscription
 
   - name: upgrade all apt packages
-    apt: upgrade=dist force_apt_get=yes
+    apt:
+      upgrade: yes
+      update_cache: yes
 
   - name: install basic tools
     apt:
@@ -28,6 +30,8 @@
         - curl
         - unzip
         - lshw
+        - libsasl2-modules
+        - mailutils
       state: latest
 
   - name: Copy kill vm script
@@ -39,7 +43,8 @@
       mode: '700'
 
 # Configure SMTP email notifications
-# https://technotim.live/posts/proxmox-alerts/      
+# https://technotim.live/posts/proxmox-alerts/    
+
 
   - name: create font directory
     file:
@@ -91,6 +96,4 @@
       dest: ~/.bashrc
       marker: "# ANSIBLE MANAGED BLOCK #"
       content: |
-        if [ -d ~/.config/bash ]; then
-          . ~/.config/bash/bash_aliases
-        fi
+        source ~/.config/bash/bash_aliases
